[gd_scene load_steps=2 format=3 uid="uid://c3hl6t1q3vbo"]

[ext_resource type="Script" path="res://TrafficLight.gd" id="1_laxwx"]

[node name="TrafficLight" type="Node2D"]
script = ExtResource("1_laxwx")

[node name="YellowRect" type="ColorRect" parent="."]
offset_top = 40.0
offset_right = 40.0
offset_bottom = 80.0
color = Color(1, 0.960784, 0, 1)

[node name="GreenRect" type="ColorRect" parent="."]
offset_top = 80.0
offset_right = 40.0
offset_bottom = 120.0
color = Color(0, 1, 0.356863, 1)

[node name="RedRect" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.898039, 0, 0, 1)
